--- a/app/src/main/res/layout/layout_customer_display.xml
+++ b/app/src/main/res/layout/layout_customer_display.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.feerlaroc.mqasho.schema.tenant.view.CustomerDisplayView2
+<com.feerlaroc.mqasho.schema.tenant.view.CustomerDisplayView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_customer_display_view"
@@ -87,4 +87,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</com.feerlaroc.mqasho.schema.tenant.view.CustomerDisplayView2>
+</com.feerlaroc.mqasho.schema.tenant.view.CustomerDisplayView>
