--- a/app/src/main/res/layout/layout_customer_header.xml
+++ b/app/src/main/res/layout/layout_customer_header.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.feerlaroc.mqasho.schema.tenant.view.CustomerHeaderView2
+<com.feerlaroc.mqasho.schema.tenant.view.CustomerHeaderView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -49,4 +49,4 @@
             android:textSize="@dimen/text_title"/>
     </RelativeLayout>
 
-</com.feerlaroc.mqasho.schema.tenant.view.CustomerHeaderView2>
+</com.feerlaroc.mqasho.schema.tenant.view.CustomerHeaderView>
