--- a/app/src/main/res/layout/layout_customer_pin.xml
+++ b/app/src/main/res/layout/layout_customer_pin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.feerlaroc.mqasho.schema.tenant.view.CustomerPinView2
+<com.feerlaroc.mqasho.schema.tenant.view.CustomerPinView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,4 +18,4 @@
 
     </LinearLayout>
 
-</com.feerlaroc.mqasho.schema.tenant.view.CustomerPinView2>
+</com.feerlaroc.mqasho.schema.tenant.view.CustomerPinView>
