--- a/app/src/main/res/layout/layout_customer_display.xml
+++ b/app/src/main/res/layout/layout_customer_display.xml
@@ -58,7 +58,7 @@
                     <LinearLayout
                         android:id="@+id/top"
                         android:layout_width="match_parent"
-                        android:layout_height="190dp"
+                        android:layout_height="150dp"
                         android:orientation="vertical">
 
                     </LinearLayout>
@@ -67,16 +67,17 @@
                         android:id="@+id/second_row"
                         android:layout_below="@+id/top"
                         android:layout_width="match_parent"
-                        android:layout_height="230dp"
+                        android:layout_height="80dp"
                         android:orientation="vertical">
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/third_row"
+                        android:background="@color/color_light_gray"
                         android:layout_below="@+id/second_row"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="300dp"
                         android:layout_alignParentBottom="true"
                         android:orientation="vertical">
                     </LinearLayout>
