--- a/app/src/main/res/layout/layout_customer_edit.xml
+++ b/app/src/main/res/layout/layout_customer_edit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.feerlaroc.mqasho.schema.tenant.view.TenantEditView
+<com.feerlaroc.mqasho.schema.tenant.view.CustomerEditView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -143,7 +143,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.feerlaroc.widgets.rx.ReactiveToggleButton
+                    <com.feerlaroc.widgets.ReactiveToggleButton
                         xmlns:mstb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/toggle_customer_gender"
                         android:layout_width="wrap_content"
@@ -153,7 +153,7 @@
                         mstb:mstbPrimaryColor="@color/color_divider"
                         mstb:mstbSecondaryColor="@color/color_draft"/>
 
-                    <com.feerlaroc.widgets.rx.ReactiveToggleButton
+                    <com.feerlaroc.widgets.ReactiveToggleButton
                         xmlns:mstb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/toggle_customer_gender2"
                         android:layout_width="wrap_content"
@@ -171,4 +171,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</com.feerlaroc.mqasho.schema.tenant.view.TenantEditView>
+</com.feerlaroc.mqasho.schema.tenant.view.CustomerEditView>
