--- a/app/src/main/res/layout/layout_customer_invoice_total.xml
+++ b/app/src/main/res/layout/layout_customer_invoice_total.xml
@@ -2,7 +2,7 @@
 <com.feerlaroc.mqasho.schema.tenant.view.CustomerInvoiceTotalsView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="30dp">
 
     <LinearLayout
         android:id="@+id/layout_customer_textbite"
@@ -10,11 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <com.feerlaroc.widgets.ReactiveCurrencyBite
             android:id="@+id/textbite_outstanding_amount"
             android:layout_weight="1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:padding="@dimen/activity_vertical_margin_8dp"/>
 
